Frost: Fix alignment issues in the site editor.
* Frost: Fix alignment issues in the site editor.
* Frost: Add specificity to full width styles.
* Frost: Remove extra spacing in template files.
* Frost: Remove bottom padding on main group.

--- a/frost/assets/css/style-editor.css
+++ b/frost/assets/css/style-editor.css
@@ -427,3 +427,11 @@ p.has-background {
 .is-style-no-margin {
 	margin: 0;
 }
+
+/* Layout
+--------------------------------------------- */
+
+.is-root-container .wp-block[data-align="full"] {
+	margin-left: calc(-100vw / 2 + 100% / 2) !important;
+	margin-right: calc(-100vw / 2 + 100% / 2) !important;
+}
